// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
}

<h1
  className="c0"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
.c0 {
  display: block;
  float: left;
}

<h1
  className="c0"
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
.c0 {
  display: block;
  float: right;
}

<h1
  className="c0"
/>
`;

exports[`H1 renders correctly with no props 1`] = `
.c0 {
  display: block;
  float: none;
}

<h1
  className="c0"
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
.c0 {
  display: block;
  float: none;
  font-size: 36px;
}

<h1
  className="c0"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
.c0 {
  display: block;
  float: none;
  font-weight: normal;
}

<h1
  className="c0"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: red;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
.c0 {
  display: block;
  float: left;
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
.c0 {
  display: block;
  float: right;
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 31px;
  font-weight: normal;
}

<h2
  className="c0"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 28px;
  font-weight: bold;
}

<h2
  className="c0"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: red;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="red"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
.c0 {
  display: block;
  float: left;
  color: #070707;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
.c0 {
  display: block;
  float: right;
  color: #070707;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 31px;
  font-weight: normal;
}

<h3
  className="c0"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: #070707;
  font-size: 22px;
  font-weight: bold;
}

<h3
  className="c0"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: red;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
  color="red"
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
.c0 {
  display: block;
  float: left;
  color: inherit;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
.c0 {
  display: block;
  float: right;
  color: inherit;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
/>
`;

exports[`H4 renders correctly with no props 1`] = `
.c0 {
  display: block;
  float: none;
  color: inherit;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: inherit;
  font-size: 31px;
  font-weight: normal;
}

<h4
  className="c0"
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
.c0 {
  display: block;
  float: none;
  color: inherit;
  font-size: 18px;
  font-weight: bold;
}

<h4
  className="c0"
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
.c0 {
  display: block;
  clear: left;
  float: none;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
.c0 {
  display: block;
  clear: right;
  float: none;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
.c0 {
  display: block;
  clear: none;
  float: none;
  color: red;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
  color="red"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
.c0 {
  display: block;
  clear: none;
  float: left;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
.c0 {
  display: block;
  clear: none;
  float: right;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
.c0 {
  display: block;
  clear: none;
  float: none;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
.c0 {
  display: block;
  clear: none;
  float: none;
  color: #070707;
  font-size: 31px;
  font-weight: bold;
}

<h5
  className="c0"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
.c0 {
  display: block;
  clear: none;
  float: none;
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
/>
`;

exports[`Label renders correctly with no props 1`] = `
.c0 {
  display: block;
  color: #070707;
  font-size: 14px;
  font-weight: normal;
}

<label
  className="c0"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 14px;
  font-weight: normal;
}

<p
  className="c0"
/>
`;

exports[`P2 renders correctly with no props 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 12px;
  font-weight: normal;
}

<p
  className="c0"
/>
`;

exports[`S1 renders correctly with no props 1`] = `
.c0 {
  display: block;
  color: #070707;
  font-size: 12px;
  font-weight: normal;
}

<span
  className="c0"
/>
`;
